Primera parte de la practica, creacion del contexto y la configuracion de la conexion

--- a/Practica Biblioteca/appsettings.json
+++ b/Practica Biblioteca/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "equiposDbConnection": "Data Source =Alex-PC\\MSSQLSERVER01; Initial Catalog = BIBLIOTECA; User id = sa; Password = walter64#; Connect Timeout = 120; Encrypt=False "
+    "bibliotecaDbConnection": "Data Source =Alex-PC\\MSSQLSERVER01; Initial Catalog = BIBLIOTECA; User id = sa; Password = walter64#; Connect Timeout = 120; Encrypt=False "
   },
   "Logging": {
     "LogLevel": {
